--- a/TestsAndSamples/PinlistTests/PinlistTests.cbp
+++ b/TestsAndSamples/PinlistTests/PinlistTests.cbp
@@ -31,8 +31,8 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
-			<Add directory="..\mcucpp" />
-			<Add directory="..\mcucpp\Test" />
+			<Add directory="..\..\mcucpp" />
+			<Add directory="..\..\mcucpp\Test" />
 		</Compiler>
 		<Unit filename="main.cpp" />
 		<Unit filename="..\mcucpp\TestPort.h" />
